<resources>
    <string name="app_name">Lorem Ipsum</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">Profile</string>
    <string name="name">"Name"</string>
    <string name="profile">"Profile"</string>
    <string name="options">"Options"</string>
    <string name="settings">"Settings"</string>
    <string name="number">"Number"</string>
    <string name="coupons">"Coupons"</string>
    <string name="messages">"Messages"</string>
    <string name="reservations">"Reservations"</string>
    <string name="favorites">"Favorites"</string>
    <string name="edit_profile">"Edit Profile"</string>
    <string name="notifications">"Notifications"</string>
    <string name="log_out">"Log-Out"</string>
    <string name="nearby_places">"Nearby Places"</string>
    <string name="profile_pic">"Profile Picture"</string>
    <string name="home_pic">"Home Picture"</string>
    <string name="map_pic">"Map Picture"</string>
    <string name="notification_pic">"Notification Picture"</string>
    <string name="map">"Map"</string>
    <string name="title_activity_maps">Map</string>
    <string name="none">None</string>
</resources>
