<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/kalam"
        android:text="@string/number"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/kalam"
        android:text="@string/name"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.326"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="212dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/caveat_bold"
        android:text="@string/profile"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="114dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/profile_pic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="284dp"
        android:layout_height="455dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/caveat"
            android:text="@string/options"
            android:textColor="#020202"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button6"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:onClick="get_coupons"
            android:text="@string/coupons"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button7"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:onClick="get_messages"
            android:text="@string/messages"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button8"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:onClick="get_reservations"
            android:text="@string/reservations"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button9"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:onClick="get_favorites"
            android:text="@string/favorites"
            android:textAlignment="textStart" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:fontFamily="@font/caveat"
            android:text="@string/settings"
            android:textColor="#000000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button10"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:onClick="get_editprofile"
            android:text="@string/edit_profile"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button12"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:onClick="get_notifications"
            android:text="@string/notifications"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button11"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kalam"
            android:text="@string/log_out"
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home_pic"
            android:onClick="get_home"
            app:srcCompat="@mipmap/home_app" />

        <ImageButton
            android:id="@+id/imageButton2"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/map_pic"
            android:onClick="get_map"
            app:srcCompat="@mipmap/map_app" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/notification_pic"
            android:onClick="get_notification"
            app:srcCompat="@mipmap/noti_app" />

        <ImageButton
            android:id="@+id/imageButton4"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_pic"
            app:srcCompat="@mipmap/profile_app" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>