<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageButton"
            style="@android:style/Widget.Holo.Light.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/home_pic"
            android:onClick="get_home"
            app:srcCompat="@mipmap/home_app" />

        <ImageButton
            android:id="@+id/imageButton2"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/map_pic"
            android:onClick="get_map"
            app:srcCompat="@mipmap/map_app" />

        <ImageButton
            android:id="@+id/imageButton3"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/notification_pic"
            android:onClick="get_notification"
            app:srcCompat="@mipmap/noti_app" />

        <ImageButton
            android:id="@+id/imageButton4"
            style="@android:style/Widget.Holo.Button.Borderless.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/profile_pic"
            android:onClick="get_profile"
            app:srcCompat="@mipmap/profile_app" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/IV_pic"
                android:layout_width="match_parent"
                android:layout_height="241dp"
                android:contentDescription="@string/home_pic"
                tools:srcCompat="@tools:sample/backgrounds/scenic[12]" />

            <TextView
                android:id="@+id/TV_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_music"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_ap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_cover"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_address"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_phone"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_schedule"
                android:layout_width="match_parent"
                android:layout_height="263dp"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/TV_menu"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:fontFamily="@font/kalam"
                android:text="@string/none"
                android:textColor="#020202"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>